# ic-evm-sign

e2e/backend/: Cargo.toml
lib/: Cargo.toml
