[package]
name = "ic-evm-sign"
version = "0.1.3"
edition = "2021"
description = "This library enables Internet Computer canisters to sign transactions for EVM-compatible blockchains"
license = "Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/ic-evm-sign"

[dependencies]
ic-cdk = "0.6.8"
candid = "0.8.4"
serde = "1"
ethereum-rlp = "0.2.3"
easy-hasher = "2.2.1"
libsecp256k1 = { version = "0.6.0", default-features = false, features = ["lazy-static-context"] }
futures = "0.3.25"
